@@ -92,6 +92,7 @@ module Mail # :doc:
   require 'mail/encodings/unix_to_unix'
 
   require 'mail/matchers/has_sent_mail'
+  require 'mail/matchers/attachment_matchers.rb'
 
   # Finally... require all the Mail.methods
   require 'mail/mail'
