@@ -42,15 +42,25 @@ module Mail
 
       def bcc(recipient_or_list)
         @blind_copy_recipients ||= []
-
-        if recipient_or_list.kind_of?(Array)
-          @blind_copy_recipients += recipient_or_list
-        else
-          @blind_copy_recipients << recipient_or_list
-        end
+        @blind_copy_recipients.concat(Array(recipient_or_list))
         self
       end
 
+      def with_attachments(attachments)
+        @attachments ||= []
+        @attachments.concat(Array(attachments))
+        self
+      end
+
+      def with_no_attachments
+        @having_attachments = false
+        self
+      end
+
+      def with_any_attachments
+        @having_attachments = true
+        self
+      end
 
       def with_subject(subject)
         @subject = subject
@@ -95,8 +105,10 @@ module Mail
 
       def filter_matched_deliveries(deliveries)
         candidate_deliveries = deliveries
-
-        %w(sender recipients copy_recipients blind_copy_recipients subject subject_matcher body body_matcher).each do |modifier_name|
+        modifiers =
+          %w(sender recipients copy_recipients blind_copy_recipients subject
+          subject_matcher body body_matcher having_attachments attachments)
+        modifiers.each do |modifier_name|
           next unless instance_variable_defined?("@#{modifier_name}")
           candidate_deliveries = candidate_deliveries.select{|matching_delivery| self.send("matches_on_#{modifier_name}?", matching_delivery)}
         end
@@ -126,6 +138,17 @@ module Mail
 
       def matches_on_subject_matcher?(delivery)
         @subject_matcher.match delivery.subject
+      end
+
+      def matches_on_having_attachments?(delivery)
+        @having_attachments && delivery.attachments.any? ||
+          (!@having_attachments && delivery.attachments.none?)
+      end
+
+      def matches_on_attachments?(delivery)
+        @attachments.each_with_index.inject( true ) do |sent_attachments, (attachment, index)|
+          sent_attachments &&= (attachment === delivery.attachments[index])
+        end
       end
 
       def matches_on_body?(delivery)
