@@ -17,6 +17,7 @@
 * #872 - Low-level option to include BCC field in the encoded message (grossadamm)
 * #918 - Account for possibility of absent delivery-status headers (kjg)
 * #874 – Stay under 1000-char SMTP line length limits (pushrax)
+* #924 - Matcher for having attachments (schepedw)
 
 == Version 2.6.3 - Mon Nov 3 23:53 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>
 
